--- a/src/main/resources/fxml/confirm_delete.fxml
+++ b/src/main/resources/fxml/confirm_delete.fxml
@@ -102,7 +102,7 @@
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <Label fx:id="student" layoutX="246.0" layoutY="234.0" prefHeight="20.0" prefWidth="110.0" text="12301238129381023" textFill="WHITE">
+      <Label fx:id="studentNumber" layoutX="246.0" layoutY="234.0" prefHeight="20.0" prefWidth="110.0" text="12301238129381023" textFill="WHITE">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
