--- a/src/main/resources/fxml/DashFX.fxml
+++ b/src/main/resources/fxml/DashFX.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="621.0" prefWidth="815.0" style="-fx-background-radius: 20;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MP.DashController">
+<AnchorPane prefHeight="621.0" prefWidth="815.0" style="-fx-background-radius: 20;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="MP.AppController">
    <children>
       <VBox prefHeight="644.0" prefWidth="117.0" style="-fx-background-color: #212426;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
