--- a/src/main/resources/fxml/DatabaseEntry - Copy.fxml
+++ b/src/main/resources/fxml/DatabaseEntry - Copy.fxml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<fx:root minHeight="-Infinity" minWidth="-Infinity" prefHeight="45.0" prefWidth="542.0" style="-fx-background-color: #212426; -fx-background-radius: 5;" type="javafx.scene.layout.Pane" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root minHeight="-Infinity" minWidth="-Infinity" prefHeight="45.0" prefWidth="542.0" style="-fx-background-color: #212426; -fx-background-radius: 5;" type="javafx.scene.layout.Pane" xmlns="http://javafx.com/javafx/1" xmlns:fx="http://javafx.com/fxml/1">
+    <Text fx:id="name" fill="WHITE" layoutX="19.0" layoutY="20.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name" wrappingWidth="70.33447647094727">
+        <font>
+            <Font size="13.0" />
+        </font>
+    </Text>
     <Text fx:id="saisId" fill="WHITE" layoutX="115.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SAIS ID" wrappingWidth="78.45965576171875">
         <font>
             <Font size="13.0" />
@@ -17,19 +21,14 @@
             <Font size="13.0" />
         </font>
     </Text>
+    <Text fx:id="address" fill="WHITE" layoutX="327.0" layoutY="20.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Address" wrappingWidth="142.0457763671875">
+        <font>
+            <Font size="13.0" />
+        </font>
+    </Text>
     <Button fx:id="btn" contentDisplay="TOP" layoutX="558.0" layoutY="7.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="63.0" styleClass="button5" stylesheets="@css/fullpackstyling.css" text="Delete" textFill="#e5e9f0">
         <font>
             <Font name="System Bold" size="13.0" />
         </font>
     </Button>
-   <Label fx:id="name" layoutX="14.0" prefHeight="43.0" prefWidth="91.0" text="124124 sdfsdfs sdfsdf sdfsdfsdf sdfsdfsdfsdfs sdfsdf " textFill="WHITE" wrapText="true">
-      <font>
-         <Font size="13.0" />
-      </font>
-   </Label>
-   <Label fx:id="address" layoutX="318.0" layoutY="2.0" prefHeight="43.0" prefWidth="139.0" text="124124 sdfsdfs sdfsdf sdfsdfsdf sdfsdfsdfsdfs sdfsdf " textFill="WHITE" wrapText="true">
-      <font>
-         <Font size="13.0" />
-      </font>
-   </Label>
 </fx:root>
